--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="scroll" class="scroll">
+    <div id="scroll" class="scroll" aria-label="Click to unravel the scroll">
         <div id="riddle" class="hidden">
             <p>Commence with the number of fingers gracing your hands, then deduct the primary-color hues of the rainbow's bands. Multiply by the faces carved on Mount Rushmore in stone, add the Olympic rings, in color count alone.</p>
             <p>Take twice now this sum, a mere bridge to the grand, and then add the number of continents to this noble strand. Multiply by days in a week plus one more to be best, then subtract a modern year's total digits, sorry to put you to the test.</p>
