--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magical Scroll</title>
+    <title>Enchanted Scroll</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,6 @@
             <p>Commence with the number of fingers gracing your hands, then deduct the primary-color hues of the rainbow's bands. Multiply by the faces carved on Mount Rushmore in stone, add the Olympic rings, in color count alone.</p>
             <p>Take twice now this sum, a mere bridge to the grand, and then add the number of continents to this noble strand. Multiply by days in a week plus one more to be best, then subtract a modern year's total digits, sorry to put you to the test.</p>
             <p>Add the total years in a century to this grand parade, then, finally, deduct English alphabet letters minus one, and your number won’t fade.</p>
-            <p>Answer: <span id="answer"></span></p>
         </div>
     </div>
     <script src="script.js"></script>
