--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enchanted Scroll</title>
+    <title>Interactive Scroll</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="scroll" class="scroll" aria-label="Click to unravel the scroll">
+    <div id="scrollContainer" class="scroll-container">
+        <div id="scroll" class="scroll rolled"></div>
         <div id="riddle" class="hidden">
             <p>Commence with the number of fingers gracing your hands, then deduct the primary-color hues of the rainbow's bands. Multiply by the faces carved on Mount Rushmore in stone, add the Olympic rings, in color count alone.</p>
             <p>Take twice now this sum, a mere bridge to the grand, and then add the number of continents to this noble strand. Multiply by days in a week plus one more to be best, then subtract a modern year's total digits, sorry to put you to the test.</p>
